melhoria na funcionalidade search

--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
     
 
     <div class="container-md">
-
+        <h4 id="resultPesquisa"></h4>
+        <h6 id="casoClienteNull"></h6>
         <div class="row">
             <div class="col-md-12">
                 
